fix: title link alignment

--- a/style.css
+++ b/style.css
@@ -50,8 +50,6 @@ body {
 
     text-decoration: none;
     color: #00b4ff;
-    border-radius: 5px;
-    padding: 5px;
 }
 
 .container {
